--- a/UI/codepulse/src/app/features/blog-post/edit-blogpost/edit-blogpost.component.html
+++ b/UI/codepulse/src/app/features/blog-post/edit-blogpost/edit-blogpost.component.html
@@ -29,7 +29,9 @@
                 </div>
     
                 <div class="met-3">
-                    <label for="featuredImageUrl" class="form-label">Featured Image Url</label>
+                    <label for="featuredImageUrl" class="form-label">Featured Image Url 
+                        <button type="button" class="btn btn-light" (click)="openModalImageSelector()">Select Image</button>
+                    </label>
     
                     <ng-container *ngIf="model.featuredImageUrl !==''">
                         <div>
@@ -81,3 +83,10 @@
     </ng-container>
 
 </div>
+
+
+<!-- use the image-selector component inside of edit-blogpost component -->
+ <div class="images-container-modal" [ngClass]="{'d-block':isImageSelectorVisible,'d-none':!isImageSelectorVisible}">
+    <button type="button" class="btn btn-light" style="position: fixed; top: 10px; right: 10px;" (click)="closeModalImageSelector()">X</button>
+    <app-image-selector></app-image-selector>
+ </div>
