--- a/UI/codepulse/src/app/features/category/category-list/category-list.component.html
+++ b/UI/codepulse/src/app/features/category/category-list/category-list.component.html
@@ -1,7 +1,12 @@
 <div class="container">
     <h1 class="mt-3">Category List</h1>
 
-    <div class="d-flex justify-content-end mt-3">
+    <div class="d-flex justify-content-between mt-3">
+
+        <div class="d-flex">
+            <input type="text" class="form-control" #queryText>
+            <button type="button" class="btn btn-warning ms-3" (click)="onSearch(queryText.value)">Search</button>
+        </div>
         <a [routerLink]="['/admin/categories/add']" class="btn btn-primary">Add Category</a>
 
     </div>
@@ -13,8 +18,38 @@
             <thead>
                 <tr>
                     <th>Id</th>
-                    <th>Name</th>
-                    <th>Url Handle</th>
+                    <th>
+                        Name
+                        <span>
+                            <span>
+                                <button type="button" class="btn btn-light" (click)="sort('name','asc')">
+                                    <i class="bi bi-arrow-bar-up"></i>
+                                </button>
+                            </span>
+                            <span>
+                                <button type="button" class="btn btn-light" (click)="sort('name','desc')">
+                                    <i class="bi bi-arrow-bar-down"></i>
+                                </button>
+                            </span>
+                        </span>
+
+                    </th>
+                    <th>
+                        Url Handle
+                        <span>
+                            <span>
+                                <button type="button" class="btn btn-light" (click)="sort('url','asc')">
+                                    <i class="bi bi-arrow-bar-up"></i>
+                                </button>
+                            </span>
+                            <span>
+                                <button type="button" class="btn btn-light" (click)="sort('url','desc')">
+                                    <i class="bi bi-arrow-bar-down"></i>
+                                </button>
+                            </span>
+                        </span>
+
+                    </th>
                     <th></th>
                 </tr>
             </thead>
