--- a/UI/codepulse/src/app/features/category/category-list/category-list.component.html
+++ b/UI/codepulse/src/app/features/category/category-list/category-list.component.html
@@ -69,5 +69,36 @@
             </tbody>
         </table>
 
+        <nav aria-label="Page navigation example">
+            <div class="d-flex justify-content-between align-items-center">
+                <!---Results per Page selection-->
+                <div>
+                    <label for="resultsPerPage" class="mr-2">Results Per Page:</label>
+                    <select id="resultsPerPage" class="form-select" [(ngModel)]="resultsPerPage" (change)="UpdateResultsPerPage()">
+                        <option value="5">5</option>
+                        <option value="10">10</option>
+                        <option value="20">20</option>
+                        <option value="50">50</option>
+                        <option value="100">100</option>
+                    </select>
+                </div>
+
+                <!---Pagination-->
+                <ul class="pagination">
+                    <li class="page-item" [ngClass]="{'disabled':pageNumber===1}">
+                        <a class="page-link" (click)="getPrevPage()">Previous</a>
+                    </li>
+                    
+                    <li *ngFor="let item of list; let index=index" class="page-item" [ngClass]="{'active':pageNumber===index+1}">
+                        <a class="page-link"  (click)="getPage(index+1)">{{index+1}}</a>
+                    </li>
+      
+                    <li class="page-item">
+                        <a class="page-link" (click)="getNextPage()">Next</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+
     </ng-container>
 </div>
